--- a/wrk_files/b71a989fe353739b.css
+++ b/wrk_files/b71a989fe353739b.css
@@ -6,20 +6,30 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: -1;
   overflow: hidden;
+  pointer-events: none;
 }
 
 .video-background video {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  z-index: -1;
+}
+
+/* Override any conflicting background styles */
+body, body.bg-black {
+  background: transparent !important;
+}
+
+main {
+  background: transparent !important;
+  position: relative;
+  z-index: 1;
 }
