--- a/wrk_files/b71a989fe353739b.css
+++ b/wrk_files/b71a989fe353739b.css
@@ -6,21 +6,16 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: -1;
   overflow: hidden;
-  pointer-events: none;
 }
 
 .video-background video {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1;
 }
 
 /* Override any conflicting background styles */
